~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Bugfixes in 6.0 version

* Dropped dependency on /bin/find utility.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Bugfixes in 5.1 version

* The rpm macro directory is automatically detected.

* the sysvinit/systemd systems are now detected

* properly generate manpage with help2man

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Bugfixes in 5.0 version

* postgresql-setup --upgrade now works with "umask & 0004 != 0"

* Fixed semantics of 'redhat_sockets_hack' configuration option.

* The RPM macros file is installed automatically, it provides now
  %postgresql_major, %pgtests_init and %pgtests_start macros.

* Fixed automatic detection of $PGMAJORVERSION.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 4.0 version:

* The postgresql-upgrade package is now optional packaging feature, for the
  postgresql-setup --upgrade scenario it might/might not be needed.

* Additional check for correct postgres's $HOME permissions implemented.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Bugfixes in 3.5 version

* Fix spelling in error message regarding data-dir mountpoint.

* Fix testsuite for SCL.

* Fix documentation regarding --initdb (we require root actually).

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Bugfixes in 3.4 version

* Fix upgrade for non-standard unit names with --unit option.

New in 3.4 version

* Add --upgrade-from-unit option which allows proper selection of
  predecessor service name (when the default detection does not help).

* postgresql-setup now throws warning if the PGDATA directory (or its
  parent directory) is a mountpoint.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Bugfixes in 3.3 version

* The PGPORT/PGOPTS/.. variables should be correctly forwarded down from